<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="200"
        android:key="graph_refresh_after"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_graph_refresh_after"
        android:dialogMessage="@string/pref_graph_refresh_after_desc"/>
    <EditTextPreference
        android:defaultValue="200"
        android:key="graph_collect_size"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_graph_collect_size"
        android:dialogMessage="@string/pref_graph_collect_size_desc"/>
    <EditTextPreference
        android:defaultValue="200"
        android:key="graph_window_height"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_graph_window_height"
        android:dialogMessage="@string/pref_graph_window_height_desc"/>
    <EditTextPreference
        android:defaultValue="1"
        android:key="graph_line_thickness"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_graph_line_thickness"
        android:dialogMessage="@string/pref_graph_line_thickness_desc"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="graph_cubic"
        android:title="@string/pref_graph_cubic"
        android:summary="@string/pref_graph_cubic_desc"
        />
    <EditTextPreference
        android:defaultValue="15"
        android:key="graph_font_size"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_graph_font_size"
        android:dialogMessage="@string/pref_graph_font_size_desc"/>
    <ListPreference
        android:defaultValue="CIRCLE"
        android:entries="@array/pref_graph_legend_form_entries"
        android:entryValues="@array/pref_graph_legend_form_values"
        android:key="graph_legend_form"
        android:summary="%s"
        android:title="@string/pref_graph_legend_form" />
    <EditTextPreference
        android:defaultValue="10000"
        android:key="graph_vertical_upper_lower_limit"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="number"
        android:title="@string/pref_graph_vertical_upper_lower_limit"
        android:dialogMessage="@string/pref_graph_vertical_upper_lower_limit_desc"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="graph_zoom_options"
        android:title="@string/pref_graph_zoom_options"
        android:summary="@string/pref_graph_zoom_options_desc"
        />

</PreferenceScreen>