<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skgadi.cit.DocumentationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/Documentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <Switch
                android:id="@+id/Switch00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Firmware" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:id="@+id/DocumentLayout00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textMultiLine"
                    android:text="@string/FIRMWARE" />

                <Button
                    android:id="@+id/Open_URL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="OpenFirmwareURL"
                    android:text="@string/OPEN_URL" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <Switch
                android:id="@+id/Switch02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DOCUMENT_IMAGE_CAPTION_01" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:id="@+id/DocumentLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="200dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <Switch
                android:id="@+id/Switch03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DOCUMENT_IMAGE_CAPTION_02" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:id="@+id/DocumentLayout03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="200dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>